[package]
name = "scaph2cc"
version = "0.1.0"
edition = "2021"
authors = ["Olivier de Meringo <demeringo@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.60"
clap = { version = "3.1.6", features = ["derive"] }